INCLUDEDIR=../src
AM_CFLAGS=-Wall -Werror -ggdb -I${INCLUDEDIR}
AM_LDFLAGS=-lorionsocket

bin_PROGRAMS = httpRequestPerform \
               tcpConnect \
               cookies \
               httpGet \
               httpGet_using_post \
               httpGet_with_setUrl \
               httpReqRes \
               parseResponse \
               parseUrl \
               simple \
               tcpListen

httpRequestPerform_SOURCES=httpRequestPerform.c
tcpConnect_SOURCES=tcpConnect.c
cookies_SOURCES=cookies.c
httpGet_SOURCES=httpGet.c
httpGet_using_post_SOURCES=httpGet_using_post.c
httpGet_with_setUrl_SOURCES=httpGet_with_setUrl.c
httpReqRes_SOURCES=httpReqRes.c
parseResponse_SOURCES=parseResponse.c
parseUrl_SOURCES=parseUrl.c
simple_SOURCES=simple.c
tcpListen_SOURCES=tcpListen.c



